<resources>
    <string name="app_name">Travel Luxury</string>
    <string name="flight_icon">flight icon</string>
    <string name="hotel_icon">hotel icon</string>
    <string name="xperience_icon">xperience icon</string>
    <string name="flights">Flights</string>
    <string name="hotels">Hotels</string>
    <string name="xperience">Xperience</string>
    <string name="email">Email</string>
    <string name="or_log_in_with">Or log in with</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="don_t_have_a_travel_luxury_account">Don\'t have a Travel Luxury account?</string>
    <string name="register_now">Register now</string>
    <string name="login">Login</string>
    <string name="your_data_will_be_protected_and_will_not_be_shared">Your data will be protected and will not be shared.</string>
    <string name="or_register_with">Or register with</string>
    <string name="register">Register</string>
    <string name="why_register">Why register?</string>
    <string name="lock_icon">lock_icon</string>
    <string name="home">Home</string>
    <string name="explore">Explore</string>
    <string name="my_booking">My booking</string>
    <string name="saved">Saved</string>
    <string name="my_account">My account</string>
    <string name="search_for_items_destinations">Search for items, destinations...</string>
    <string name="action_bar_title">Action bar title</string>
    <string name="search_icon">search icon</string>
    <string name="notification_icon">notification icon</string>
    <string name="message_icon">message icon</string>
    <string name="go_back_button">Go back button</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="view_my_profile">View My Profile</string>
    <string name="jennie_kim">Jennie Kim</string>
    <string name="jennie_kim_email">jenniekim1976@gmail.com</string>
    <string name="_0_points">0 Points</string>
    <string name="trade_point_for_coupons_and_learn_how_to_earn_more">Trade point for coupons and learn how to earn more! Trade point for coupons and learn how to earn more!</string>
    <string name="holding_place_text">This is some text for holding place. This is some text for holding place</string>
    <string name="title">Title</string>
    <string name="category">Category</string>
    <string name="email_example_com">email@example.com</string>
    <string name="full_name">Full Name</string>
    <string name="login_activity_action_bar_title">Login</string>
    <string name="login_activity_footer_left_text">Don\'t have a Travel Luxury account?</string>
    <string name="login_activity_footer_right_text">Register now</string>
    <string name="register_activity_action_bar_title">Become a Travel Luxury Member</string>
    <string name="register_activity_footer_left_text">Already have a Travel Luxury account?</string>
    <string name="register_activity_footer_right_text">Log in now</string>
    <string name="place_image">Place image</string>
    <string name="domestic_destinations">Domestic destinations</string>
    <string name="international_destinations">International destinations</string>
    <string name="common_facilities">Common Facilities</string>
    <string name="see_all_facilities">See all facilities</string>
    <string name="accommodation_policies">Accommodation Policies</string>
    <string name="check_in_check_out_time">Check-in/Check-out Time</string>
    <string name="additional_policy">Additional Policy</string>
    <string name="ratings_and_reviews">Ratings and Reviews</string>
    <string name="see_all_reviews">See all reviews</string>
    <string name="description">Description</string>
    <string name="facility_icon">Facility Icon</string>
    <string name="facility_name">Facility Name</string>
    <string name="general_check_in_instructions">General Check-in Instructions</string>
    <string name="policy_title_1">Policy Title 1</string>
    <string name="policy_description_1">Policy Description 1</string>
    <string name="policy_description_2">Policy Description 2</string>
    <string name="policy_description_3">Policy Description 3</string>
    <string name="policy_title_3">Policy Title 3</string>
    <string name="policy_title_2">Policy Title 2</string>
    <string name="read_all">Read all</string>
    <string name="see_details">See details</string>
    <string name="hotel_name">Hotel Name</string>
    <string name="hotel_address">War10, Ho Chi Minh City</string>
    <string name="room_night">/room/night</string>
    <string name="select">Select</string>
    <string name="price">VND 543.726</string>
    <string name="refund_information">refund information</string>
    <string name="breakfast_information">Breakfast information</string>
    <string name="bed_information">Bed information</string>
    <string name="guest_information">Guest information</string>
    <string name="room_type">Room Type</string>
    <string name="room_name">Room Name</string>
    <string name="type_description">Type Description</string>
    <string name="tick_icon">tick icon</string>
    <string name="end_of_section">End of section</string>
    <string name="change">change</string>
    <string name="_1_night_s_1_room_s">1 night(s), 1 room(s)</string>
    <string name="city_name">City Name</string>
    <string name="sort">Sort</string>
    <string name="map">Map</string>
    <string name="filter">Filter</string>
    <string name="hotel_rating_point">8.5</string>
    <string name="hotel_rating_count">(324)</string>
    <string name="hotel_name_example">Central Park Saigon Hotel</string>
    <string name="select_room">Select Room</string>
    <string name="price_room_night_starts_from">Price/room/night starts from</string>
    <string name="fill_in_details">Fill in Details</string>
    <string name="tap_below_to_see_your_booking_summary">Tap below to see your booking summary</string>
    <string name="check_in">Check-in</string>
    <string name="check_out">Check-out</string>
    <string name="price_details">Price Details</string>
    <string name="tax_invoice_description">Taxes and fees, are recovery charges which Travel Luxury pays to the property. If you have any questions regarding tax and invoice, please refer to Travel Luxury Terms and Conditions</string>
    <string name="total_price">Total Price</string>
    <string name="taxes_and_fees">Taxes and fees</string>
    <string name="continue_text">Continue</string>
    <string name="label_text">Label</string>
    <string name="i_m_booking_for_myself">I\'m booking for myself</string>
    <string name="i_m_booking_for_another_person">I\'m booking for another person</string>
    <string name="contact_details">Contact Details</string>
    <string name="special_request">Special Request</string>
    <string name="add_special_request_s">Add Special Request(s)</string>
    <string name="request_not_guarantee">All special requests are subject to availability and are not guarantees</string>
    <string name="book">Book</string>
    <string name="cancel">Cancel</string>
    <string name="where_to_send_your_booking_details">Where to send your booking details?</string>
    <string name="contact_s_name">Contact\'s Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="done">Done</string>
    <string name="payment_confirmation">Payment Confirmation</string>
    <string name="pay">Pay</string>
    <string name="no_payment_method_selected">No Payment Method Selected</string>
    <string name="choose">Choose</string>
    <string name="additional_options">Additional Options</string>
    <string name="add">Add</string>
    <string name="choose_payment_method">Choose Payment Method</string>
    <string name="bank_transfer">Bank Transfer</string>
    <string name="vietcombank">Vietcombank</string>
    <string name="momo_e_wallet">Momo E-Wallet</string>
    <string name="techcombank">Techcombank</string>
    <string name="pay_now">Pay now</string>
    <string name="all_photos">All Photos</string>
    <string name="view_photos_in">View photos in</string>
    <string name="searching_for_hotels">Searching for hotels</string>
    <string name="please_wait_a_moment">Please wait a moment</string>
    <string name="close">Close</string>
    <string name="see_all_photos">See all photos</string>
    <string name="check_in_date">Check-in Date</string>
    <string name="choose_check_in_date">Choose check-in date</string>
    <string name="choose_duration">Choose duration</string>
    <string name="choose_duration_of_stay">Choose Duration of Stay</string>
    <string name="notify_choose_date_duration">Please choose check-in date and duration</string>
    <string name="email_empty">Email is required</string>
    <string name="email_invalid">Invalid email format</string>
    <string name="password_empty">Password is required</string>
    <string name="password_invalid">Minimum length 6 character(s)</string>
    <string name="login_success">Awesome! You have been logged in successfully</string>
    <string name="wrong_email_or_password">Your email and password combination is incorrect. Please try again.</string>
    <string name="note">Note</string>
    <string name="settings">Settings</string>
    <string name="account_information">Account Information</string>
    <string name="preferences">Preferences</string>
    <string name="account_security"><![CDATA[Account & Security]]></string>
    <string name="password_security"><![CDATA[Password & Security]]></string>
    <string name="profile_privacy">Profile Privacy</string>
    <string name="country">Country</string>
    <string name="currency">Currency</string>
    <string name="language">Language</string>
    <string name="passenger_quick_pick">Passenger Quick Pick</string>
    <string name="push_notification">Push Notification</string>
    <string name="newsletter_promo_info"><![CDATA[Newsletter & Promo Info]]></string>
    <string name="app_version">App Version</string>
    <string name="term_conditions"><![CDATA[Term & Conditions]]></string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="about_us">About us</string>
    <string name="log_out">Log Out</string>
    <string name="free_cancellation_util">Free cancellation util</string>
    <string name="logged_in_as">Logged in as</string>
    <string name="payment_successful">Payment Successful!</string>
    <string name="payment_success_message">Your booking and payment was placed successfully. You will receive a confirmation email shortly.</string>
    <string name="go_to_home_screen">Go to Home Screen</string>
    <string name="pay_as">Pay as</string>
    <string name="booking_id">Booking ID:</string>
    <string name="date_example">01/01/2022</string>
    <string name="oops">Oops!</string>
    <string name="page_not_available">Page temporarily unavailable</string>
    <string name="Description">Description</string>
    <string name="da_thanh_toan">Đã thanh toán</string>
    <string name="chua_thanh_toan">Chưa thanh toán</string>
</resources>
