<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home_page"
        android:enabled="true"
        android:icon="@drawable/home_icon"
        android:title="@string/home"/>
    <item
        android:id="@+id/explore_page"
        android:enabled="true"
        android:icon="@drawable/explore_icon"
        android:title="@string/explore"/>
    <item
        android:id="@+id/my_booking_page"
        android:enabled="true"
        android:icon="@drawable/my_booking_icon"
        android:title="@string/my_booking"/>
    <item
        android:id="@+id/saved_page"
        android:enabled="true"
        android:icon="@drawable/saved_icon"
        android:title="@string/saved"/>
    <item
        android:id="@+id/my_account_page"
        android:enabled="true"
        android:icon="@drawable/my_account_icon"
        android:title="@string/my_account"/>
</menu>
