<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.reserve.contact.ContactActivity">

    <RelativeLayout
        android:id="@+id/rlContactActionBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main_blue_color"
        android:paddingHorizontal="16dp"
        android:paddingVertical="13dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:text="@string/contact_details"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:text="@string/cancel"
            android:textAllCaps="true"
            android:textColor="@color/white" />

    </RelativeLayout>

    <TextView
        android:id="@+id/tvContactTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rlContactActionBar"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/where_to_send_your_booking_details"
        android:textColor="#434343"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edtContactName"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:layout_below="@id/tvContactTitle"
        android:layout_marginHorizontal="16dp"
        android:hint="@string/contact_s_name"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/edtContactNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtContactName"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="10dp"
        android:inputType="phone"
        android:hint="@string/mobile_number"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/edtContactEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:layout_below="@id/edtContactNumber"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="10dp"
        android:hint="@string/email"
        android:textSize="14sp" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_below="@id/edtContactEmail"
        app:cardCornerRadius="5dp"
        android:layout_marginTop="15dp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_centerHorizontal="true"
            android:text="@string/done"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:background="#ff5e1f" />

    </com.google.android.material.card.MaterialCardView>


</RelativeLayout>
