<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".login.LoginActivity">

    <include
        android:id="@+id/action_bar"
        layout="@layout/toolbar" />

    <EditText
        android:id="@+id/edit_text_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="35dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/action_bar" />

    <EditText
        android:id="@+id/edit_text_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="20dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/edit_text_email" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/botron_button"
        android:text="@string/log_in"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/edit_text_password" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="10dp"
        android:text="@string/forgot_password"
        android:textAlignment="center"
        android:textColor="#1E90FF"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/button_login" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/center_line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#D3D3D3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_view_or_login_with"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingHorizontal="6dp"
            android:text="@string/or_log_in_with"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@id/center_line">

        <Button
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:background="@drawable/google_button"
            android:drawableStart="@drawable/google2"
            android:text="@string/google"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="13sp" />

        <Button
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_weight="1"
            android:background="@drawable/facebook_button"
            android:text="@string/facebook"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="13sp" />
    </LinearLayout>

    <include
        android:id="@+id/footer"
        layout="@layout/footer_" />


</androidx.constraintlayout.widget.ConstraintLayout>