<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".register.RegisterActivity">

    <ai.ftech.travelluxury.view.ActionBarView
        android:id="@+id/abvRegisterActionBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtRegisterEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="35dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/abvRegisterActionBar" />

    <TextView
        android:id="@+id/tvRegisterEmailError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:text="@string/app_name"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="13sp"
        app:layout_constraintTop_toBottomOf="@+id/edtRegisterEmail" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constRegisterDataProtect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/tvRegisterEmailError">

        <ImageView
            android:id="@+id/ivRegisterLock"
            android:layout_width="wrap_content"
            android:layout_height="15sp"
            android:contentDescription="@string/lock_icon"
            android:src="@drawable/lock_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvRegisterDataProtect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_data_will_be_protected_and_will_not_be_shared"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/ivRegisterLock"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/shape"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/constRegisterDataProtect" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="10dp"
        android:text="@string/why_register"
        android:textAlignment="center"
        android:textColor="#1E90FF"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/btnRegister" />

    <RelativeLayout
        android:id="@+id/rlLoginCenterLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_centerVertical="true"
            android:background="#D3D3D3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvRegisterCenterLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@color/white"
            android:paddingHorizontal="6dp"
            android:text="@string/or_register_with"
            android:textAlignment="center"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </RelativeLayout>

    <ai.ftech.travelluxury.view.SocialNetworkView
        android:id="@+id/snvRegisterSocialNetwork"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:paddingHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@id/rlLoginCenterLine" />

    <ai.ftech.travelluxury.view.FooterView
        android:id="@+id/fvRegisterFooter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>