<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".main.MainActivity">

    <RelativeLayout
        android:id="@+id/action_bar"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/main_blue_color">

        <RelativeLayout
            android:id="@+id/search_bar"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_marginVertical="8dp"
            android:layout_marginStart="15dp"
            android:layout_toStartOf="@id/notification_icon"
            android:background="@drawable/main_search_shape">

            <ImageView
                android:id="@+id/search_icon"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_marginStart="5dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/search_icon"
                android:padding="5dp"
                android:src="@drawable/search_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/search_icon"
                android:text="@string/search_for_items_destinations" />

        </RelativeLayout>

        <ImageView
            android:id="@+id/notification_icon"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_toStartOf="@id/message_icon"
            android:contentDescription="@string/notification_icon"
            android:padding="15dp"
            android:src="@drawable/notification2_icon" />

        <ImageView
            android:id="@+id/message_icon"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/message_icon"
            android:padding="15dp"
            android:src="@drawable/message_icon" />

    </RelativeLayout>


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        app:menu="@menu/bottom_navigation_menu" />

</RelativeLayout>
